Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gethostname-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: gethostname
        image: gethostname
