pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: single-gethostname-pod
spec:
  containers:
  - name: gethostname
    image: gethostname
