ingress.yml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: gethostname-ingress
spec:
  backend:
    serviceName: gethostname-service
    servicePort: 80
